--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,21 @@
-appdirs==1.4.4
-asgiref==3.2.7
+autopep8==1.5.2
 certifi==2020.4.5.1
+chardet==3.0.4
 click==7.1.2
-distlib==0.3.0
-Django==3.0.6
-djangorestframework==3.11.0
-filelock==3.0.12
 flake8==3.8.2
 Flask==1.1.2
+gunicorn==20.0.4
+idna==2.9
 importlib-metadata==1.6.0
 itsdangerous==1.1.0
 Jinja2==2.11.2
 MarkupSafe==1.1.1
 mccabe==0.6.1
 Pillow==7.1.2
-pipenv==2018.11.26
 pycodestyle==2.6.0
 pyflakes==2.2.0
-pytz==2020.1
 reportlab==3.5.42
-six==1.15.0
-sqlparse==0.3.1
-virtualenv==20.0.21
-virtualenv-clone==0.5.4
+requests==2.23.0
+urllib3==1.25.9
 Werkzeug==1.0.1
 zipp==3.1.0
